k8s/service-frontend.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: flow-finder-frontend
  ports:
    - protocol: TCP
      port: 80
