k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flow-finder-ingress
spec:
  ingressClassName: nginx-ext
  tls:
    - hosts:
        - flow-finder-dev.kube-ext.isc.heia-fr.ch
  rules:
    - host: flow-finder-dev.kube-ext.isc.heia-fr.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
